--- a/src/index.css
+++ b/src/index.css
@@ -15,13 +15,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow: hidden;
+  margin: 0;
+  padding: 0;
 }
 
 .app {
-  width: 100vw;
-  height: 100vh;
-  overflow: hidden;
+  width: 100%;
+  min-height: 100vh;
 }
 
 /* Utility Classes */
